Requirements added and one todo added

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,3 +1,4 @@
+#CLI Support
 #Exception handling
 #Logging to console to log file or dont show logging
 #Benchmark ve brute force remove files after testing
